--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,18 +1,34 @@
 {% extends 'app.html' %}
 {% block content %}
 
+<div class="container mt-5">
+  <div class="card shadow">
+    <div class="card-header bg-dark text-white">
+      <h3 class="mb-0">Welcome to Your Dashboard, {{ user[1] }}!</h3>
+    </div>
+    <div class="card-body">
+      <h4 class="mb-4">Your Profile Information</h4>
+      <dl class="row">
+        <dt class="col-sm-3">Full Name:</dt>
+        <dd class="col-sm-9">{{ user[1] }}</dd>
 
-<div class="container">
-  <h2>Welcome to the Dashboard!</h2>
+        <dt class="col-sm-3">Email:</dt>
+        <dd class="col-sm-9">{{ user[2] }}</dd>
 
-    {% if user %}
-        <p>User Info:</p>
-        <ul>
-            <li>Name : {{ user[1] }}</li>
-            <li>Email : {{ user[2] }}</li>
-        </ul>
-        <a href="/logout" class="btn btn-dark">Logout</a>
-    {% endif %}
+        <dt class="col-sm-3">Mobile:</dt>
+        <dd class="col-sm-9">{{ user[3] }}</dd>
+
+        <dt class="col-sm-3">Gender:</dt>
+        <dd class="col-sm-9">{{ user[4]|capitalize }}</dd>
+      </dl>
+      
+      <div class="mt-4">
+        <a href="/logout" class="btn btn-danger btn-lg">
+          Logout <i class="bi bi-box-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
